all stats model

--- a/nba.ipynb
+++ b/nba.ipynb
@@ -2070,6 +2070,142 @@
     "print(f\"\\nTotal predicted All-Stars (BLK model): {data_2025['AllStar_Pred_BLK'].sum()}\")\n",
     "print(f\"Total predicted All-Stars (DWS model): {data_2025['AllStar_Pred_DWS'].sum()}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total features for comprehensive model: 43\n",
+      "Features included: ['MPG', 'FG', 'FGA', 'FG%', '3P', '3PA', '3P%', '2P', '2PA', '2P%', 'eFG%', 'FT', 'FTA', 'FT%', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS', 'PER', 'TS%', '3PAr', 'FTr', 'ORB%', 'DRB%', 'TRB%', 'AST%', 'STL%', 'BLK%', 'TOV%', 'USG%', 'OWS', 'DWS', 'WS', 'WS/48', 'OBPM', 'DBPM', 'BPM', 'VORP']\n",
+      "\n",
+      "=== COMPREHENSIVE MODEL EVALUATION ===\n",
+      "Accuracy: 0.9333\n",
+      "ROC AUC: 0.9724\n",
+      "\n",
+      "=== COMPREHENSIVE MODEL CLASSIFICATION REPORT ===\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.95      0.92      0.93       152\n",
+      "         1.0       0.92      0.95      0.93       148\n",
+      "\n",
+      "    accuracy                           0.93       300\n",
+      "   macro avg       0.93      0.93      0.93       300\n",
+      "weighted avg       0.93      0.93      0.93       300\n",
+      "\n",
+      "\n",
+      "=== TOP 15 PREDICTED ALL-STARS (COMPREHENSIVE MODEL) ===\n",
+      "                   Name Team Position  AllStar_Prob_ALL  PTS  TRB  AST  BLK  STL  PER   WS  VORP\n",
+      "Shai Gilgeous-Alexander  OKC       PG          0.999914 32.9  5.1  6.3  1.0  1.7 30.8 15.9   8.3\n",
+      "           Nikola Jokić  DEN        C          0.999897 29.3 12.8 10.2  0.7  1.8 32.0 14.9   8.9\n",
+      "  Giannis Antetokounmpo  MIL       PF          0.999677 30.2 11.9  5.9  1.2  0.8 29.8  9.6   5.5\n",
+      "           Jayson Tatum  BOS       PF          0.999085 27.2  8.7  6.0  0.5  1.1 22.0  8.9   4.6\n",
+      "            Luka Dončić  NaN       PG          0.995941 27.8  8.4  7.8  0.4  1.9 23.6  4.7   3.2\n",
+      "      Victor Wembanyama  SAS        C          0.995766 24.3 11.0  3.7  3.8  1.1 24.1  3.8   3.2\n",
+      "           LeBron James  LAL       SF          0.995544 24.5  8.1  8.5  0.6  1.0 22.7  6.7   4.2\n",
+      "           James Harden  LAC       PG          0.994972 22.5  5.8  8.6  0.7  1.4 19.4  6.8   3.6\n",
+      "     Karl-Anthony Towns  NYK        C          0.994046 24.3 12.8  3.1  0.7  1.0 23.4  9.4   3.3\n",
+      "        Anthony Edwards  MIN       SG          0.991696 27.2  5.7  4.6  0.6  1.1 19.6  7.0   3.9\n",
+      "          Anthony Davis  NaN       PF          0.987958 25.0 11.6  3.4  2.1  1.2 26.4  6.3   3.0\n",
+      "        Cade Cunningham  DET       PG          0.983426 25.7  6.1  9.2  0.7  1.0 20.1  5.4   3.2\n",
+      "         Damian Lillard  MIL       PG          0.976741 24.9  4.7  7.1  0.2  1.2 21.3  7.7   3.1\n",
+      "          Stephen Curry  GSW       PG          0.974429 24.0  4.3  6.0  0.4  1.1 20.8  6.5   3.9\n",
+      "            Tyler Herro  MIA       SG          0.970677 23.7  5.2  5.6  0.2  0.9 19.3  6.5   3.1\n",
+      "Total predicted All-Stars (Comprehensive model): 53\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/817711397.py:55: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_2025['AllStar_Prob_ALL'] = prob_all\n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/817711397.py:56: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_2025['AllStar_Pred_ALL'] = (prob_all >= 0.5).astype(int)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.metrics import classification_report, accuracy_score, roc_auc_score\n",
+    "\n",
+    "\n",
+    "# Load data (using your existing code)\n",
+    "train_df = pd.read_csv(\"train_dataset.csv\")\n",
+    "test_df = pd.read_csv(\"test_dataset.csv\")\n",
+    "\n",
+    "# Now let's build a comprehensive model with all metrics\n",
+    "# Identify non-feature columns\n",
+    "per_game_features = [\"MPG\", \"FG\", \"FGA\", \"FG%\", \"3P\", \"3PA\", \"3P%\", \"2P\", \"2PA\", \"2P%\", \"eFG%\", \"FT\", \"FTA\", \"FT%\", \"ORB\", \"DRB\", \"TRB\", \"AST\", \"STL\", \"BLK\", \"TOV\", \"PF\", \"PTS\"]\n",
+    "adv_features = [\"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \"TRB%\", \"AST%\", \"STL%\", \"BLK%\", \"TOV%\", \"USG%\", \"OWS\", \"DWS\", \"WS\", \"WS/48\", \"OBPM\", \"DBPM\", \"BPM\", \"VORP\"]\n",
+    "\n",
+    "# Get all available feature columns (both standard and advanced stats)\n",
+    "all_features = [col for col in train_df.columns if col in per_game_features or col in adv_features]\n",
+    "\n",
+    "print(f\"\\nTotal features for comprehensive model: {len(all_features)}\")\n",
+    "print(\"Features included:\", all_features)\n",
+    "\n",
+    "# Prepare data for comprehensive model\n",
+    "X_train_all = train_df[all_features]\n",
+    "X_test_all = test_df[all_features]\n",
+    "\n",
+    "\n",
+    "# Train comprehensive model\n",
+    "model_all = LogisticRegression(max_iter=10000, C=0.1)  # C=0.1 adds some regularization\n",
+    "model_all.fit(X_train_all, y_train)\n",
+    "y_pred_all = model_all.predict(X_test_all)\n",
+    "y_prob_all = model_all.predict_proba(X_test_all)[:, 1]\n",
+    "\n",
+    "# Evaluate comprehensive model\n",
+    "print(\"\\n=== COMPREHENSIVE MODEL EVALUATION ===\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred_all):.4f}\")\n",
+    "print(f\"ROC AUC: {roc_auc_score(y_test, y_prob_all):.4f}\")\n",
+    "print(\"\\n=== COMPREHENSIVE MODEL CLASSIFICATION REPORT ===\")\n",
+    "print(classification_report(y_test, y_pred_all))\n",
+    "\n",
+    "\n",
+    "# Load 2025 data and make predictions (similar to your code)\n",
+    "per_game_df = pd.read_csv(\"playerdata_per_game.csv\")\n",
+    "adv_stats_df = pd.read_csv(\"playerdata_advanced.csv\")\n",
+    "adv_stats_df.rename(columns={\"Pos\": \"Position\"}, inplace=True)\n",
+    "merged_df = per_game_df.merge(adv_stats_df, on=[\"Year\", \"Name\", \"Age\", \"Team\", \"Position\", \"G\", \"GS\"], suffixes=(\"_per\", \"_adv\"))\n",
+    "data_2025 = merged_df[(merged_df[\"Year\"] == 2025) & (merged_df[\"G\"] >= 30)]\n",
+    "\n",
+    "# Check if all required features are available in 2025 data\n",
+    "X_2025_all = data_2025[all_features]\n",
+    "\n",
+    "\n",
+    "# Make predictions with all models\n",
+    "prob_blk = model_blk.predict_proba(data_2025[blk_feature])[:, 1]\n",
+    "prob_dws = model_dws.predict_proba(data_2025[dws_feature])[:, 1]\n",
+    "prob_all = model_all.predict_proba(X_2025_all)[:, 1]\n",
+    "\n",
+    "data_2025['AllStar_Prob_ALL'] = prob_all\n",
+    "data_2025['AllStar_Pred_ALL'] = (prob_all >= 0.5).astype(int)\n",
+    "\n",
+    "# Display top 15 predicted All-Stars from the comprehensive model\n",
+    "print(\"\\n=== TOP 15 PREDICTED ALL-STARS (COMPREHENSIVE MODEL) ===\")\n",
+    "top_all = data_2025.sort_values('AllStar_Prob_ALL', ascending=False).head(15)\n",
+    "display_cols = ['Name', 'Team', 'Position', 'AllStar_Prob_ALL', 'AllStar_Prob_BLK', 'AllStar_Prob_DWS', 'PTS', 'TRB', 'AST', 'BLK', 'STL', 'PER', 'WS', 'VORP']\n",
+    "display_cols = [col for col in display_cols if col in top_all.columns]\n",
+    "print(top_all[display_cols].to_string(index=False))\n",
+    "\n",
+    "# Compare predictions between models\n",
+    "print(f\"Total predicted All-Stars (Comprehensive model): {data_2025['AllStar_Pred_ALL'].sum()}\")"
+   ]
   }
  ],
  "metadata": {
