--- a/nba.ipynb
+++ b/nba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
     "        time.sleep(3)\n",
     "\n",
     "    df = pd.DataFrame(data)\n",
-    "    cols = [\"Year\", \"Name\", \"Age\", \"Team\", \"Position\", \"Games Played\", \"Games Started\", \"MPG\", \"FG\", \"FGA\", \"FG%\", \"3P\", \"3PA\", \"3P%\", \"2P\", \"2PA\", \"2P%\", \"eFG%\", \"FT\", \"FTA\", \"FT%\", \"ORB\", \"DRB\", \"TRB\", \"AST\", \"STL\", \"AST\", \"TOV\", \"PF\", \"PTS\", \"Awards\"]\n",
+    "    cols = [\"Year\", \"Name\", \"Age\", \"Team\", \"Position\", \"Games Played\", \"Games Started\", \"MPG\", \"FG\", \"FGA\", \"FG%\", \"3P\", \"3PA\", \"3P%\", \"2P\", \"2PA\", \"2P%\", \"eFG%\", \"FT\", \"FTA\", \"FT%\", \"ORB\", \"DRB\", \"TRB\", \"AST\", \"STL\", \"BLK\", \"TOV\", \"PF\", \"PTS\", \"Awards\"]\n",
     "\n",
     "    df.columns = cols\n",
     "    df.to_csv(outfile)\n",
@@ -268,7 +268,7 @@
     "\n",
     "    df = pd.DataFrame(data)\n",
     "    cols = [\"Year\", \"Name\", \"Age\", \"Team\", \"Pos\", \"G\", \"GS\", \"MP\", \"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \n",
-    "        \"TRB%\", \"AST%\", \"STL%\", \"AST%\", \"TOV%\", \"USG%\", \"OWS\", \"USG\", \"WS\", \"WS/48\", \n",
+    "        \"TRB%\", \"AST%\", \"STL%\", \"AST%\", \"TOV%\", \"USG%\", \"OWS\", \"DWS\", \"WS\", \"WS/48\", \n",
     "        \"OBPM\", \"DBPM\", \"BPM\", \"VORP\", \"Awards\"\n",
     "    ]\n",
     "    df.columns = cols\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/909200387.py:26: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/1089007980.py:26: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -345,6 +345,7 @@
     "adv_features = [\"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \"TRB%\", \"AST%\", \"STL%\", \"AST%\", \"TOV%\", \"USG%\", \"OWS\", \"DWS\", \"WS\", \"WS/48\", \"OBPM\", \"DBPM\", \"BPM\", \"VORP\"]\n",
     "\n",
     "# Final dataset\n",
+    "merged_df = pd.concat([all_stars, non_all_stars]).sample(frac=1, random_state=42)  # Shuffle\n",
     "final_df = pd.concat([all_stars, non_all_stars]).sample(frac=1, random_state=42)  # Shuffle\n",
     "features_to_normalize = per_game_features + adv_features\n",
     "scaler = MinMaxScaler()\n",
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -545,13 +546,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   Year              Name  All_Star  Prob_Per  Prob_Adv  Pred_Per  Pred_Adv  \\\n",
+      "0  2013     Zach Randolph       1.0  0.499443  0.629025       0.0       1.0   \n",
+      "1  2013     Kevin Garnett       1.0  0.497565  0.700667       0.0       1.0   \n",
+      "2  2006       Sam Cassell       0.0  0.511071  0.774125       1.0       1.0   \n",
+      "3  2005   Stephen Jackson       0.0  0.487637  0.262397       0.0       0.0   \n",
+      "4  2003  Latrell Sprewell       0.0  0.473268  0.141352       0.0       0.0   \n",
+      "5  2017  Danilo Gallinari       0.0  0.532944  0.315572       1.0       0.0   \n",
+      "6  2018     Klay Thompson       1.0  0.540337  0.214296       1.0       0.0   \n",
+      "7  2004   Jamaal Magloire       1.0  0.459509  0.375690       0.0       0.0   \n",
+      "8  2005       Ben Wallace       1.0  0.457648  0.652976       0.0       1.0   \n",
+      "9  2009     Rashard Lewis       1.0  0.542970  0.791728       1.0       1.0   \n",
+      "\n",
+      "    MPG   FG   FGA  ...  TOV%  USG%  OWS  DWS   WS  WS/48  OBPM  DBPM  BPM  \\\n",
+      "0  34.3  6.2  13.5  ...  11.5  23.1  3.2  4.7  7.9  0.145   1.0  -0.7  0.2   \n",
+      "1  29.7  6.2  12.5  ...  10.5  24.5  1.8  3.8  5.6  0.133   0.9   1.7  2.6   \n",
+      "2  34.0  6.3  14.3  ...  12.2  25.0  4.8  2.8  7.6  0.137   2.1  -0.5  1.6   \n",
+      "3  35.4  6.5  16.1  ...  11.8  27.7  1.0  2.1  3.1  0.082   0.9  -0.6  0.3   \n",
+      "4  38.6  6.1  15.2  ...  12.3  22.6  1.6  1.6  3.2  0.054   0.7  -0.6  0.1   \n",
+      "5  33.9  5.3  11.9  ...   8.2  20.0  6.2  0.7  6.8  0.154   2.8  -1.4  1.4   \n",
+      "6  34.3  7.9  16.2  ...   9.5  23.7  3.1  1.8  4.9  0.094   1.7  -2.1 -0.4   \n",
+      "7  33.9  4.7   9.9  ...  16.5  20.0  3.9  3.7  7.6  0.131  -0.9  -0.7 -1.6   \n",
+      "8  36.1  4.0   8.8  ...   9.5  15.2  1.8  6.7  8.5  0.153   0.2   2.6  2.8   \n",
+      "9  36.2  6.1  13.8  ...  11.6  22.0  4.7  4.8  9.5  0.160   2.7   1.0  3.7   \n",
+      "\n",
+      "   VORP  \n",
+      "0   1.5  \n",
+      "1   2.3  \n",
+      "2   2.4  \n",
+      "3   1.1  \n",
+      "4   1.5  \n",
+      "5   1.9  \n",
+      "6   1.0  \n",
+      "7   0.3  \n",
+      "8   3.2  \n",
+      "9   4.1  \n",
+      "\n",
+      "[10 rows x 50 columns]\n",
       "Insights saved to model_insights.txt\n"
      ]
     }
@@ -586,35 +624,58 @@
     "# Select columns to display (keep key stats)\n",
     "display_cols = [\"Year\", \"Name\", \"Age\", \"G\", \"All_Star\", \"Prob_Per\", \"Prob_Adv\", \"Pred_Per\", \"Pred_Adv\"] + per_game_features + adv_features\n",
     "\n",
+    "# Keep only the relevant columns from merged_df (avoid duplicate Year, Name)\n",
+    "original_stats = merged_df[[\"Year\", \"Name\"] + per_game_features + adv_features].set_index([\"Year\", \"Name\"])\n",
+    "\n",
+    "# Function to retrieve original stats for a given subset of test_df\n",
+    "def get_original_stats(df_subset):\n",
+    "    return df_subset.set_index([\"Year\", \"Name\"])[[\"All_Star\", \"Prob_Per\", \"Prob_Adv\", \"Pred_Per\", \"Pred_Adv\"]]\\\n",
+    "                    .join(original_stats, on=[\"Year\", \"Name\"]).reset_index()\n",
+    "\n",
+    "\n",
+    "# Get unnormalized stats for each category\n",
+    "most_uncertain_per = get_original_stats(most_uncertain_per)\n",
+    "print(most_uncertain_per)\n",
+    "most_uncertain_adv = get_original_stats(most_uncertain_adv)\n",
+    "\n",
+    "wrong_preds_per_high = get_original_stats(wrong_preds_per_high.head(10))\n",
+    "wrong_preds_per_low = get_original_stats(wrong_preds_per_low.head(10))\n",
+    "\n",
+    "wrong_preds_adv_high = get_original_stats(wrong_preds_adv_high.head(10))\n",
+    "wrong_preds_adv_low = get_original_stats(wrong_preds_adv_low.head(10))\n",
+    "\n",
+    "disagreements = get_original_stats(disagreements.head(10))\n",
+    "\n",
     "# Save insights to a text file\n",
     "with open(\"model_insights.txt\", \"w\") as f:\n",
     "    f.write(\"\\nMost Uncertain Predictions (Per Game Model):\\n\")\n",
-    "    f.write(most_uncertain_per[display_cols].to_string(index=False) + \"\\n\\n\")\n",
+    "    f.write(most_uncertain_per.to_string(index=False) + \"\\n\\n\")\n",
     "\n",
     "    f.write(\"\\nMost Uncertain Predictions (Advanced Stats Model):\\n\")\n",
-    "    f.write(most_uncertain_adv[display_cols].to_string(index=False) + \"\\n\\n\")\n",
+    "    f.write(most_uncertain_adv.to_string(index=False) + \"\\n\\n\")\n",
     "\n",
     "    f.write(\"\\nMost Confident Incorrect Predictions (Per Game Model) - High Confidence:\\n\")\n",
-    "    f.write(wrong_preds_per_high[display_cols].head(10).to_string(index=False) + \"\\n\\n\")\n",
+    "    f.write(wrong_preds_per_high.to_string(index=False) + \"\\n\\n\")\n",
     "\n",
     "    f.write(\"\\nMost Confident Incorrect Predictions (Per Game Model) - Low Confidence:\\n\")\n",
-    "    f.write(wrong_preds_per_low[display_cols].head(10).to_string(index=False) + \"\\n\\n\")\n",
+    "    f.write(wrong_preds_per_low.to_string(index=False) + \"\\n\\n\")\n",
     "\n",
     "    f.write(\"\\nMost Confident Incorrect Predictions (Advanced Stats Model) - High Confidence:\\n\")\n",
-    "    f.write(wrong_preds_adv_high[display_cols].head(10).to_string(index=False) + \"\\n\\n\")\n",
+    "    f.write(wrong_preds_adv_high.to_string(index=False) + \"\\n\\n\")\n",
     "\n",
     "    f.write(\"\\nMost Confident Incorrect Predictions (Advanced Stats Model) - Low Confidence:\\n\")\n",
-    "    f.write(wrong_preds_adv_low[display_cols].head(10).to_string(index=False) + \"\\n\\n\")\n",
+    "    f.write(wrong_preds_adv_low.to_string(index=False) + \"\\n\\n\")\n",
     "\n",
     "    f.write(\"\\nPlayers Where Models Disagreed:\\n\")\n",
-    "    f.write(disagreements[display_cols].head(10).to_string(index=False) + \"\\n\\n\")\n",
+    "    f.write(disagreements.to_string(index=False) + \"\\n\\n\")\n",
     "\n",
-    "print(\"Insights saved to model_insights.txt\")\n"
+    "print(\"Insights saved to model_insights.txt\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1785,30 +1846,28 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Total features for comprehensive model: 40\n",
-      "Features included: ['MPG', 'FG', 'FGA', 'FG%', '3P', '3PA', '3P%', '2P', '2PA', '2P%', 'eFG%', 'FT', 'FTA', 'FT%', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'TOV', 'PF', 'PTS', 'PER', 'TS%', '3PAr', 'FTr', 'ORB%', 'DRB%', 'TRB%', 'AST%', 'STL%', 'TOV%', 'USG%', 'OWS', 'WS', 'WS/48', 'OBPM', 'DBPM', 'BPM', 'VORP']\n",
+      "Total features for comprehensive model: 42\n",
+      "Features included: ['MPG', 'FG', 'FGA', 'FG%', '3P', '3PA', '3P%', '2P', '2PA', '2P%', 'eFG%', 'FT', 'FTA', 'FT%', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS', 'PER', 'TS%', '3PAr', 'FTr', 'ORB%', 'DRB%', 'TRB%', 'AST%', 'STL%', 'TOV%', 'USG%', 'OWS', 'DWS', 'WS', 'WS/48', 'OBPM', 'DBPM', 'BPM', 'VORP']\n",
       "\n",
       "=== COMPREHENSIVE MODEL EVALUATION ===\n",
-      "Accuracy: 0.9233\n",
-      "ROC AUC: 0.9678\n",
+      "Accuracy: 0.9267\n",
+      "ROC AUC: 0.9692\n",
       "\n",
       "=== COMPREHENSIVE MODEL CLASSIFICATION REPORT ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.94      0.91      0.92       152\n",
-      "         1.0       0.91      0.94      0.92       148\n",
+      "         0.0       0.95      0.91      0.93       152\n",
+      "         1.0       0.91      0.95      0.93       148\n",
       "\n",
-      "    accuracy                           0.92       300\n",
-      "   macro avg       0.92      0.92      0.92       300\n",
-      "weighted avg       0.92      0.92      0.92       300\n",
+      "    accuracy                           0.93       300\n",
+      "   macro avg       0.93      0.93      0.93       300\n",
+      "weighted avg       0.93      0.93      0.93       300\n",
       "\n",
       "\n",
       "=== TOP 15 PREDICTED ALL-STARS (COMPREHENSIVE MODEL) ===\n",
       "                   Name Team Position  AllStar_Prob_ALL  PTS  TRB  AST  AST  STL  PER   WS  VORP\n",
       "Shai Gilgeous-Alexander  OKC       PG               1.0 32.9  5.1  6.3  6.3  1.7 30.8 15.9   8.3\n",
-      "            Cody Martin  NaN       SF               1.0  7.3  4.4  2.1  2.1  1.1 11.7  1.4   0.2\n",
-      "             Josh Green  CHO       SG               1.0  7.4  2.6  1.6  1.6  1.1  7.7  1.5  -1.1\n",
-      "             A.J. Green  MIL       SG               1.0  7.4  2.3  1.5  1.5  0.5  9.0  2.4  -0.1\n",
+      "         Brandon Clarke  MEM       PF               1.0  8.3  5.1  1.0  1.0  0.8 17.5  4.4   0.9\n",
       "           Goga Bitadze  ORL        C               1.0  7.4  6.8  2.0  2.0  0.7 19.4  5.4   1.6\n",
       "          Dalano Banton  POR       PG               1.0  7.5  1.8  2.1  2.1  0.7 14.3  1.0   0.6\n",
       "        Davion Mitchell  NaN       PG               1.0  7.5  2.1  4.7  4.7  0.9  9.4  2.1  -0.5\n",
@@ -1820,6 +1879,8 @@
       "         Taurean Prince  MIL       SF               1.0  8.1  3.6  2.0  2.0  0.9  9.8  3.2   0.2\n",
       "         Isaiah Collier  UTA       PG               1.0  8.1  3.3  6.1  6.1  0.9  9.0 -1.0  -1.6\n",
       "          Matas Buzelis  CHI       SF               1.0  8.1  3.3  0.9  0.9  0.3 11.9  1.4  -0.4\n",
+      "            Bruce Brown  NaN       PG               1.0  8.1  3.9  1.9  1.9  0.9 10.9  0.7  -0.3\n",
+      "         Ja'Kobe Walter  TOR       SG               1.0  8.2  2.9  1.5  1.5  0.8 10.0  0.9  -0.4\n",
       "Total predicted All-Stars (Comprehensive model): 396\n"
      ]
     },
@@ -1827,13 +1888,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/2860805264.py:55: SettingWithCopyWarning: \n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/2689941895.py:55: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_2025['AllStar_Prob_ALL'] = prob_all\n",
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/2860805264.py:56: SettingWithCopyWarning: \n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/2689941895.py:56: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1853,8 +1914,8 @@
     "\n",
     "# Now let's build a comprehensive model with all metrics\n",
     "# Identify non-feature columns\n",
-    "per_game_features = [\"MPG\", \"FG\", \"FGA\", \"FG%\", \"3P\", \"3PA\", \"3P%\", \"2P\", \"2PA\", \"2P%\", \"eFG%\", \"FT\", \"FTA\", \"FT%\", \"ORB\", \"DRB\", \"TRB\", \"AST\", \"STL\", \"AST\", \"TOV\", \"PF\", \"PTS\"]\n",
-    "adv_features = [\"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \"TRB%\", \"AST%\", \"STL%\", \"AST%\", \"TOV%\", \"USG%\", \"OWS\", \"USG\", \"WS\", \"WS/48\", \"OBPM\", \"DBPM\", \"BPM\", \"VORP\"]\n",
+    "per_game_features = [\"MPG\", \"FG\", \"FGA\", \"FG%\", \"3P\", \"3PA\", \"3P%\", \"2P\", \"2PA\", \"2P%\", \"eFG%\", \"FT\", \"FTA\", \"FT%\", \"ORB\", \"DRB\", \"TRB\", \"AST\", \"STL\", \"BLK\", \"TOV\", \"PF\", \"PTS\"]\n",
+    "adv_features = [\"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \"TRB%\", \"AST%\", \"STL%\", \"AST%\", \"TOV%\", \"USG%\", \"OWS\", \"DWS\", \"WS\", \"WS/48\", \"OBPM\", \"DBPM\", \"BPM\", \"VORP\"]\n",
     "\n",
     "# Get all available feature columns (both standard and advanced stats)\n",
     "all_features = [col for col in train_df.columns if col in per_game_features or col in adv_features]\n",
