google trends metric done

--- a/nba.ipynb
+++ b/nba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/1089007980.py:26: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_14218/1089007980.py:26: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1671,8 +1671,8 @@
       "=== AST MODEL CLASSIFICATION REPORT ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.70      0.79      0.74       152\n",
-      "         1.0       0.75      0.65      0.70       148\n",
+      "           0       0.70      0.79      0.74       152\n",
+      "           1       0.75      0.65      0.70       148\n",
       "\n",
       "    accuracy                           0.72       300\n",
       "   macro avg       0.72      0.72      0.72       300\n",
@@ -1682,8 +1682,8 @@
       "=== USG MODEL CLASSIFICATION REPORT ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.85      0.78      0.81       152\n",
-      "         1.0       0.79      0.86      0.82       148\n",
+      "           0       0.85      0.78      0.81       152\n",
+      "           1       0.79      0.86      0.82       148\n",
       "\n",
       "    accuracy                           0.82       300\n",
       "   macro avg       0.82      0.82      0.82       300\n",
@@ -1727,25 +1727,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/4055622242.py:63: SettingWithCopyWarning: \n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_14218/111546825.py:63: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_2025['AllStar_Prob_AST'] = prob_AST\n",
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/4055622242.py:64: SettingWithCopyWarning: \n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_14218/111546825.py:64: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_2025['AllStar_Prob_USG'] = prob_USG\n",
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/4055622242.py:65: SettingWithCopyWarning: \n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_14218/111546825.py:65: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_2025['AllStar_Pred_AST'] = (prob_AST >= 0.5).astype(int)\n",
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/4055622242.py:66: SettingWithCopyWarning: \n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_14218/111546825.py:66: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1761,8 +1761,8 @@
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
     "# Load data\n",
-    "train_df = pd.read_csv(\"train_dataset.csv\")\n",
-    "test_df = pd.read_csv(\"test_dataset.csv\")\n",
+    "train_df = pd.read_csv(\"new_train_dataset.csv\")\n",
+    "test_df = pd.read_csv(\"new_test_dataset.csv\")\n",
     "\n",
     "# Define features for separate models\n",
     "AST_feature = [\"AST\"]\n",
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1856,8 +1856,8 @@
       "=== COMPREHENSIVE MODEL CLASSIFICATION REPORT ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.95      0.91      0.93       152\n",
-      "         1.0       0.91      0.95      0.93       148\n",
+      "           0       0.95      0.91      0.93       152\n",
+      "           1       0.91      0.95      0.93       148\n",
       "\n",
       "    accuracy                           0.93       300\n",
       "   macro avg       0.93      0.93      0.93       300\n",
@@ -1888,13 +1888,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/2689941895.py:55: SettingWithCopyWarning: \n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_14218/634515361.py:55: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_2025['AllStar_Prob_ALL'] = prob_all\n",
-      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_88191/2689941895.py:56: SettingWithCopyWarning: \n",
+      "/var/folders/q4/47yf4cn93gnfbpp0q51bylrc0000gp/T/ipykernel_14218/634515361.py:56: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1909,8 +1909,8 @@
     "\n",
     "\n",
     "# Load data (using your existing code)\n",
-    "train_df = pd.read_csv(\"train_dataset.csv\")\n",
-    "test_df = pd.read_csv(\"test_dataset.csv\")\n",
+    "train_df = pd.read_csv(\"new_train_dataset.csv\")\n",
+    "test_df = pd.read_csv(\"new_test_dataset.csv\")\n",
     "\n",
     "# Now let's build a comprehensive model with all metrics\n",
     "# Identify non-feature columns\n",
@@ -1970,6 +1970,115 @@
     "\n",
     "# Compare predictions between models\n",
     "print(f\"Total predicted All-Stars (Comprehensive model): {data_2025['AllStar_Pred_ALL'].sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "Added Google Trends Score to merged_df.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import pandas as pd\n",
+    "from trendspy import Trends\n",
+    "\n",
+    "# Initialize Google Trends API\n",
+    "tr = Trends(request_delay=4.0)\n",
+    "\n",
+    "# Function to fetch relative search score\n",
+    "def get_trend_score(player_name, year):\n",
+    "    query = [player_name, \"LeBron James\"]\n",
+    "    timeframe = f\"{year}-01-01 {year}-12-31\"  # Full year data\n",
+    "    try:\n",
+    "        df = tr.interest_over_time(query, timeframe=timeframe)\n",
+    "        if df.empty or \"LeBron James\" not in df or player_name not in df:\n",
+    "            return None  # No data found\n",
+    "        player_avg = df[player_name].mean()\n",
+    "        lebron_avg = df[\"LeBron James\"].mean()\n",
+    "        return player_avg / lebron_avg if lebron_avg > 0 else None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching trend for {player_name} ({year}): {e}\")\n",
+    "        return None\n",
+    "\n",
+    "print(get_trend_score(\"Lebron James\", 2005))\n",
+    "# # Get unique (Year, Name) pairs\n",
+    "# players = merged_df[[\"Year\", \"Name\"]].drop_duplicates()\n",
+    "\n",
+    "# # Store trend scores\n",
+    "# trend_scores = {}\n",
+    "# for _, row in players.iterrows():\n",
+    "#     year, name = row[\"Year\"], row[\"Name\"]\n",
+    "#     trend_scores[(year, name)] = get_trend_score(name, year)\n",
+    "#     time.sleep(2)  # Delay to avoid rate limiting\n",
+    "\n",
+    "# # Convert dictionary to DataFrame\n",
+    "# trend_df = pd.DataFrame(list(trend_scores.items()), columns=[\"Year_Name\", \"Trend_Score\"])\n",
+    "# trend_df[[\"Year\", \"Name\"]] = pd.DataFrame(trend_df[\"Year_Name\"].tolist(), index=trend_df.index)\n",
+    "# trend_df.drop(columns=[\"Year_Name\"], inplace=True)\n",
+    "\n",
+    "# # Merge with merged_df\n",
+    "# merged_df = merged_df.merge(trend_df, on=[\"Year\", \"Name\"], how=\"left\")\n",
+    "\n",
+    "print(\"Added Google Trends Score to merged_df.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model with Trend_Score Accuracy: 0.7667\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# Define Trend_Score as the only feature\n",
+    "trend_feature = [\"Trend_Score\"]\n",
+    "\n",
+    "# Replace NaN values with zeros\n",
+    "train_df[trend_feature] = train_df[trend_feature].fillna(0)\n",
+    "test_df[trend_feature] = test_df[trend_feature].fillna(0)\n",
+    "\n",
+    "# Normalize Trend_Score\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train_trend = scaler.fit_transform(train_df[trend_feature])\n",
+    "X_test_trend = scaler.transform(test_df[trend_feature])\n",
+    "\n",
+    "# Save normalized datasets\n",
+    "normalized_train_df = train_df.copy()\n",
+    "normalized_test_df = test_df.copy()\n",
+    "\n",
+    "normalized_train_df[trend_feature] = X_train_trend\n",
+    "normalized_test_df[trend_feature] = X_test_trend\n",
+    "\n",
+    "normalized_train_df.to_csv(\"normalized_train_dataset.csv\", index=False)\n",
+    "normalized_test_df.to_csv(\"normalized_test_dataset.csv\", index=False)\n",
+    "\n",
+    "# Train logistic regression model with only Trend_Score\n",
+    "model_trend = LogisticRegression(max_iter=10000)\n",
+    "model_trend.fit(X_train_trend, train_df[\"All_Star\"])\n",
+    "\n",
+    "# Predictions\n",
+    "y_pred_trend = model_trend.predict(X_test_trend)\n",
+    "\n",
+    "# Accuracy\n",
+    "acc_trend = accuracy_score(test_df[\"All_Star\"], y_pred_trend)\n",
+    "print(f\"Model with Trend_Score Accuracy: {acc_trend:.4f}\")"
    ]
   }
  ],
